cdk.out_bak/OpbElasticacheStack-local.template.json
{
  "Resources": {
    "OpbElastiCacheSecurityGroupE0847812": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow access to Open Banking ElasticCache cluster",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow access to Open Banking ElasticCache from any ipv4 ip",
            "FromPort": 6379,
            "IpProtocol": "tcp",
            "ToPort": 6379
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow access to Open Banking ElasticCache from any ipv4 ip",
            "FromPort": 6380,
            "IpProtocol": "tcp",
            "ToPort": 6380
          }
        ],
        "VpcId": "vpc-dc2a14bb"
      },
      "Metadata": {
        "aws:cdk:path": "OpbElasticacheStack-local/OpbElastiCacheSecurityGroup/Resource"
      }
    },
    "RedisClusterPrivateSubnetGroup": {
      "Type": "AWS::ElastiCache::SubnetGroup",
      "Properties": {
        "Description": "Private Subnet for Redis cluster",
        "SubnetIds": [
          "subnet-08504341"
        ],
        "CacheSubnetGroupName": "private-subnet-redis-local"
      },
      "Metadata": {
        "aws:cdk:path": "OpbElasticacheStack-local/RedisClusterPrivateSubnetGroup"
      }
    },
    "OPBElasticachetoxMatters4CE9DC87": {
      "Type": "AWS::SNS::Topic",
      "Properties": {
        "DisplayName": "Open Banking Elasticache local SNS Topic"
      },
      "Metadata": {
        "aws:cdk:path": "OpbElasticacheStack-local/OPB-Elasticache-to-xMatters/Resource"
      }
    }
  }
}
